add #contribs requests to OpenAPI spec update model fields in front
